--- a/css/index.css
+++ b/css/index.css
@@ -6,9 +6,6 @@
     margin: 0px;
 }
 
-body{
- 
-}
 .home-conteudo-back-img{
     width: 100%;
     height: 100%;
@@ -45,7 +42,7 @@ body{
     letter-spacing: -0.02em;
 }
 .home-conteudo-texto p{
-    font-family: 'Inter';
+    font-family: 'Inter' , 'sans-serif';
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
@@ -73,6 +70,10 @@ body{
 .navebar-img > img{
     margin-left: 150px;
     margin-top: 10px;
+}
+
+.icone-hamburguer{
+    display:none;
 }
 
 .navebar-opcoes{
@@ -204,4 +205,53 @@ main{
     justify-content: center;
     height: 100vh;
     background-color: #043873;
+}
+
+@media screen and (max-width: 768px) {
+
+    .navebar-img > img {
+        margin-left: 30px;
+        margin-top: 10px;
+        margin-right: 465px;
+    }
+    .navebar-img{
+        display: contents;
+    }
+    .navebar-opcoes{
+        display:none;
+    }
+
+   .footer-redes-sociais{
+        display:none;
+   }
+
+   .home-conteudo-texto {
+    z-index: 2;
+    color: white;
+    margin-top: 310px;
+    /* margin-right: 360px; */
+    margin-right: 0px;
+    text-align: center;
+    }
+    .work {
+        display: flex;
+        /* align-content: center; */
+        /* align-items: center; */
+        flex-direction: column-reverse;
+    }
+    .work-texto {
+        margin-top: 180px;
+        margin-left: 0px;
+        text-align: center;
+    }
+
+    .work-img {
+        margin-top: 300px;
+        margin-bottom: 100px;
+        margin-left: 0px;
+    }
+
+    .icone-hamburguer{
+        display:block;
+    }
 }
